[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
libc = "0.2"
memmap2 = "0.5"
crossbeam-utils = "0.8"
core_affinity = "0.5"
parking_lot = "0.12"
bytes = "1.4"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
